experiments/04-rate-limiting/ratelimit/ingress-rate-limit.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s0-rl-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "20"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "2"
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Rate-Limit-Mode "enabled" always;
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /rl-s0
            pathType: Prefix
            backend:
              service:
                name: s0
                port:
                  number: 80
